[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/DrawingCards/Carousels/CarouselFinite.gd" type="Script" id=1]

[node name="cardContainer" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -940.0
rect_min_size = Vector2( 1080, 980 )
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card1" type="AspectRatioContainer" parent="."]
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
stretch_mode = 0

[node name="card2" type="AspectRatioContainer" parent="."]
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
stretch_mode = 0

[node name="card3" type="AspectRatioContainer" parent="."]
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
stretch_mode = 0

[node name="card4" type="AspectRatioContainer" parent="."]
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
stretch_mode = 0

[node name="card5" type="AspectRatioContainer" parent="."]
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
stretch_mode = 0

[node name="centerCardButton" type="AspectRatioContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1

[connection signal="gui_input" from="." to="." method="_on_cardContainer_gui_input"]
[connection signal="gui_input" from="centerCardButton" to="." method="_on_centerCardButton_gui_input"]
